--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development node node_modules/.bin/webpack-dev-server",
-    "build:prod": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack"
+    "build": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack"
   },
   "author": "Ilya Lytvynov",
   "license": "ISC",
@@ -16,16 +16,24 @@
     "url": "git+https://github.com/IlyaLytvynov/webpack-project-seed.git"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
+    "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^4.0.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "uglify-js": "^2.8.21",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^3.5.1",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {}
 }
