--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
-    "dev": "cross-env NODE_ENV=development node node_modules/.bin/webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development node node_modules/webpack-dev-server/bin/webpack-dev-server",
     "build": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack"
   },
   "author": "Ilya Lytvynov",
