--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
-    "dev": "cross-env NODE_ENV=development node node_modules/.bin/webpack-dev-server",
-    "build:prod": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack"
+    "dev": "cross-env NODE_ENV=development node node_modules/webpack-dev-server/bin/webpack-dev-server",
+    "build": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack"
   },
   "author": "Ilya Lytvynov",
   "license": "ISC",
@@ -16,31 +16,29 @@
     "url": "git+https://github.com/IlyaLytvynov/webpack-project-seed.git"
   },
   "devDependencies": {
+    "@types/react": "^16.0.2",
+    "@types/react-dom": "^15.5.3",
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-react": "^6.23.0",
+    "autoprefixer-loader": "^3.2.0",
+    "awesome-typescript-loader": "^3.2.3",
+    "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.4",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "tslint": "^5.6.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.4.2",
     "uglify-js": "^2.8.21",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^3.5.1",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "normalize-css": "^2.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
