--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "url": "git+https://github.com/IlyaLytvynov/webpack-project-seed.git"
   },
   "devDependencies": {
-    "@types/react": "^16.0.2",
+    "@types/prop-types": "^15.5.2",
+    "@types/react": "^15.0.1",
     "@types/react-dom": "^15.5.3",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-dom": "^4.0.8",
     "autoprefixer": "^7.1.2",
     "autoprefixer-loader": "^3.2.0",
     "awesome-typescript-loader": "^3.2.3",
@@ -39,7 +42,15 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "inversify": "^4.3.0",
+    "inversify-react": "^0.2.0",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "reflect-metadata": "^0.1.10"
   }
 }
