--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,15 @@
     "outDir": "./build/",
     "sourceMap": true,
     "noImplicitAny": true,
+    "types": ["reflect-metadata"],
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "module": "commonjs",
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "lib": ["es6", "dom"],
+    "strict": true
   },
   "include": [
     "./src/**/*"
