--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development node node_modules/webpack-dev-server/bin/webpack-dev-server",
-    "build": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack"
+    "build": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack",
+    "publish": "cross-env NODE_ENV=publish node node_modules/webpack/bin/webpack"
   },
   "author": "Ilya Lytvynov",
   "license": "ISC",
