--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "webpack": "^3.5.1",
     "webpack-dev-server": "^2.7.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
+  }
 }
