--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.5",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.18.2",
