--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
-    "dev": "cross-env NODE_ENV=development node node_modules/webpack-dev-server/bin/webpack-dev-server",
-    "build": "cross-env NODE_ENV=production node node_modules/webpack/bin/webpack",
-    "publish": "cross-env NODE_ENV=publish node node_modules/webpack/bin/webpack"
+    "dev": "node node_modules/cross-env/dist/bin/cross-env NODE_ENV=development node node_modules/webpack-dev-server/bin/webpack-dev-server",
+    "build": "node node_modules/cross-env/dist/bin/cross-env NODE_ENV=production node node_modules/webpack/bin/webpack",
+    "publish": "node node_modules/cross-env/dist/bin/cross-env NODE_ENV=publish node node_modules/webpack/bin/webpack"
   },
   "author": "Ilya Lytvynov",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "file-loader": "^1.1.5",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "3.2.1",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
