--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
     "clean-webpack-plugin": "^0.1.16",
-    "cross-env": "^4.0.0",
+    "cross-env": "4.0.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
@@ -39,6 +39,8 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "font-awesome": "4.7.0",
+    "jquery": "3.2.1"
   }
 }
