--- a/package.json
+++ b/package.json
@@ -24,23 +24,25 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
     "clean-webpack-plugin": "^0.1.16",
-    "cross-env": "4.0.0",
+    "cross-env": "^4.0.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
-    "jquery": "3.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
     "uglify-js": "^2.8.21",
     "webpack": "^3.5.1",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "font-awesome": "^4.7.0",
+    "normalize-css": "^2.3.1",
+    "normalize.less": "^1.0.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "font-awesome": "4.7.0",
-    "jquery": "3.2.1"
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1"
   }
 }
