--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.18.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
     "uglify-js": "^2.8.21",
     "webpack": "^3.5.1",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "jquery": "3.2.1",
+    "less-loader": "4.0.5"
   }
 }
