--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
     "tslint": "^5.6.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.4.2",
