--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "url": "git+https://github.com/IlyaLytvynov/webpack-project-seed.git"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/enzyme": "3.1.6",
+    "@types/enzyme-adapter-react-16": "1.0.1",
+    "@types/jest": "22.0.1",
+    "@types/promise.prototype.finally": "^2.0.2",
     "@types/prop-types": "^15.5.2",
-    "@types/react": "^15.0.1",
-    "@types/react-dom": "^15.5.3",
+    "@types/react": "16.0.34",
+    "@types/react-dom": "16.0.3",
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.8",
     "autoprefixer": "^7.1.2",
@@ -27,31 +32,53 @@
     "awesome-typescript-loader": "^3.2.3",
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^4.0.0",
-    "css-loader": "^0.28.4",
+    "css-loader": "0.28.9",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "1.1.6",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "22.1.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "react-test-renderer": "16.2.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
+    "ts-jest": "22.0.1",
     "tslint": "^5.6.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.4.2",
     "uglify-js": "^2.8.21",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.1",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "inversify": "^4.3.0",
-    "inversify-react": "^0.2.0",
+    "inversify": "^4.9.0",
+    "inversify-react": "^0.2.4",
+    "material-ui": "^0.20.0",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "mobx-react-router": "^4.0.1",
+    "normalize.css": "7.0.0",
+    "promise.prototype.finally": "^3.1.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "reflect-metadata": "^0.1.10"
+    "reflect-metadata": "^0.1.12"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
