--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "file-loader": "^1.1.5",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.18.2",
     "uglify-js": "^2.8.21",
     "webpack": "^3.5.1",
