--- a/package.json
+++ b/package.json
@@ -28,17 +28,19 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "node-sass": "^4.8.3",
+    "normalize-css": "^2.3.1",
+    "normalize.less": "^1.0.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.18.2",
     "uglify-js": "^2.8.21",
     "webpack": "^3.5.1",
-    "webpack-dev-server": "^2.7.1",
-    "font-awesome": "^4.7.0",
-    "normalize-css": "^2.3.1",
-    "normalize.less": "^1.0.0"
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
